FIX: r package installation

--- a/paper/hcpa/Dockerfile
+++ b/paper/hcpa/Dockerfile
@@ -3,14 +3,14 @@ LABEL authors="david"
 
 # Install R and dependencies
 RUN apt-get update && apt-get install -y \
-    r-base \
+    r-base r-base-dev r-recommended \
     && rm -rf /var/lib/apt/lists/*
 
 # Install python dependencies
 RUN pip install --no-cache-dir numpy pandas nibabel networkx pyarrow templateflow tqdm
 
-# Install R dependencies
-RUN Rscript -e "install.packages(c('ggplot2', 'dplyr', 'tidyr', 'arrow', 'mgcv', 'lme4', 'broom', 'readr'), repos='http://cran.r-project.org')"
+# Install R dependencies with pre-compiled binaries
+RUN Rscript -e "options(repos = c(CRAN = 'https://packagemanager.posit.co/cran/__linux__/bookworm/latest')); install.packages(c('ggplot2', 'dplyr', 'tidyr', 'arrow', 'mgcv', 'lme4', 'broom', 'readr'))"
 
 # Set working directory
 WORKDIR /app/hcpa
