WIP: hcpa fpr analysis

--- a/paper/hcpa/fpr/fpr_config.yaml
+++ b/paper/hcpa/fpr/fpr_config.yaml
@@ -1,8 +1,8 @@
 paths:
   cleaned_dir: /data2/david.ellis/public/HCPA/myderivatives/cleaned
-  csmooth_dir: /data2/david.ellis/public/HCPA/myderivatives/csmooth
+  csmooth_dir: /data2/david.ellis/public/HCPA/myderivatives/csmooth_nr
   gaussian_dir: /data2/david.ellis/public/HCPA/myderivatives/gaussian
-  output_root: /data2/david.ellis/public/HCPA/fpr
+  output_root: /data2/david.ellis/public/HCPA/myderivatives/fpr
   mask_path: null
   subjects_glob: sub-*
 
@@ -11,16 +11,14 @@ smoothing:
 
 designs:
   n_designs_per_run: 25
-  events_per_minute: 1.5
-  min_duration: 1.0
-  max_duration: 3.0
+  min_duration: 10.0
+  max_duration: 30.0
   seed: 1337
-  jitter_range_sec: [0.0, 2.0]
 
 glm:
   hrf_model: glover
   drift_model: cosine
-  high_pass: 0.008
+  high_pass: null
   oversampling: 50
 
 group:
@@ -33,7 +31,7 @@ group:
   seed: 2025
 
 feat:
-  fsf_template: /data2/david.ellis/public/HCPA/code/fsl/template.fsf
+  fsf_template: /data2/david.ellis/public/HCPA/code/fpr/template.fsf
   container: /data2/david.ellis/public/HCPA/code/tractography/fslantsnipype.sif
   smoothing_fwhm: 0
-  log_dir: /data2/david.ellis/public/HCPA/cache/fsl/logs
+  log_dir: /data2/david.ellis/public/HCPA/cache/fpr/logs
